# Prosaic

./: AI-DECLARATION.md  CANDOR.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
.well-known/: funding-manifest-urls
landing/: documentation.html  index.html  style.css
prosaic/: REFERENCE  VALID_LANGUAGES  __init__.py  __main__.py  app.py  config.py  utils.py  wizard.py
prosaic/core/: book.py  metrics.py
prosaic/screens/: dashboard.py  editor.py  profiles.py
prosaic/themes/: __init__.py  dark.tcss  light.tcss
prosaic/widgets/: __init__.py  file_tree.py  key_panel.py  outline.py  spell_text_area.py  statusbar.py
tests/: conftest.py  test_app.py  test_book.py  test_config.py  test_spell.py  test_wizard.py
